--- a/css/styles.css
+++ b/css/styles.css
@@ -5,6 +5,7 @@
  * Licensed under MIT (https://github.com/twbs/bootstrap/blob/master/LICENSE)
  */
 
+@import url("https://cdn-uicons.flaticon.com/uicons-regular-rounded/css/uicons-regular-rounded.css");
 :root {
     --blue: #007bff;
     --indigo: #6610f2;
@@ -10328,6 +10329,7 @@ form .row:first-child .floating-label-form-group {
     background-color: #202121;
     width: 20rem;
     box-shadow: rgba(0, 0, 0, 0.25) 0px 54px 55px, rgba(0, 0, 0, 0.12) 0px -12px 30px, rgba(0, 0, 0, 0.12) 0px 4px 6px, rgba(0, 0, 0, 0.17) 0px 12px 13px, rgba(0, 0, 0, 0.09) 0px -3px 5px;
+    border: 0.3rem solid #202121;
 }
 
 .card-academic-img {
@@ -10345,4 +10347,40 @@ form .row:first-child .floating-label-form-group {
 
 .accordion-container {
     background-color: #202121;
+    box-shadow: rgba(0, 0, 0, 0.25) 0px 54px 55px, rgba(0, 0, 0, 0.12) 0px -12px 30px, rgba(0, 0, 0, 0.12) 0px 4px 6px, rgba(0, 0, 0, 0.17) 0px 12px 13px, rgba(0, 0, 0, 0.09) 0px -3px 5px;
+}
+
+.accordion-style {
+    font-size: 1.25rem;
+    font-weight: 300;
+    font-family: "SB Body", -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, "Helvetica Neue", Arial, "Noto Sans", sans-serif, "Apple Color Emoji", "Segoe UI Emoji", "Segoe UI Symbol", "Noto Color Emoji";
+    box-shadow: rgba(0, 0, 0, 0.25) 0px 54px 55px, rgba(0, 0, 0, 0.12) 0px -12px 30px, rgba(0, 0, 0, 0.12) 0px 4px 6px, rgba(0, 0, 0, 0.17) 0px 12px 13px, rgba(0, 0, 0, 0.09) 0px -3px 5px;
+}
+
+.accordion-style-text {
+    font-size: 1.25rem;
+    font-weight: 300;
+    font-family: "SB Body", -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, "Helvetica Neue", Arial, "Noto Sans", sans-serif, "Apple Color Emoji", "Segoe UI Emoji", "Segoe UI Symbol", "Noto Color Emoji";
+    color: white;
+}
+
+.accordion-style-text:hover {
+    font-size: 1.25rem;
+    font-weight: 300;
+    font-family: "SB Body", -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, "Helvetica Neue", Arial, "Noto Sans", sans-serif, "Apple Color Emoji", "Segoe UI Emoji", "Segoe UI Symbol", "Noto Color Emoji";
+    color: gray;
+}
+
+.tecnologies-icons {
+    font-size: 5rem;
+    margin: 1rem;
+}
+
+.tecnologies-icons2 {}
+
+@media only screen and (max-width: 768px) {
+    /* For mobile phones: */
+    [class*="tecnologies-icons"] {
+        margin-left: 7.5rem;
+    }
 }
