finishing experience academic

--- a/css/styles.css
+++ b/css/styles.css
@@ -10381,3 +10381,12 @@ form .row:first-child .floating-label-form-group {
     margin: 1rem;
     margin-top: 2rem;
 }
+
+.tecnologies-icons3 {
+    font-size: 4rem;
+}
+
+.tecnologies-icons4 {
+    margin-top: 2rem;
+    font-size: 1rem;
+}
